2008-07-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Included the missing numbers and three more observables
	in the CDF_2008_NOTE_9351 analysis.

2008-07-29  Andy Buckley  <andy@insectnation.org>

	* Fixed wrong flags on rivet-config

2008-07-28  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Renamed CDF_2008_DRELLYAN to CDF_2008_NOTE_9351. Updated
	numbers and cuts to the final version of this CDF note.

2008-07-28  Andy Buckley  <andy@insectation.org>

	* Fixed polar angle calcuation to use atan2.

	* Added "mk" prefixes and x/setX convention to math classes.

2008-07-28  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixed definition of FourMomentum::pT (it had been returning pT2)

2008-07-27  Andy Buckley  <andy@insectnation.org>

	* Added better tests for Boost headers.

	* Added testing for -ansi, -pedantic and -Wall compiler flags.

2008-07-25  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* updated DELPHI_2002_069_CONF_603 according to information
	from the author

2008-07-17  Andy Buckley  <andy@insectnation.org>

	* Improvements to aida2flat: now can produce one output file per
	histo, and there is a -g "gnuplot mode" which comments out the
	YODA/make_plot headers to make the format readable by gnuplot.

	* Import boost::assign namespace contents into the Rivet namespace
	--- provides very useful intuitive collection initialising
	functions.

2008-07-15  Andy Buckley  <andy.buckley@dur.ac.uk>

	* Fixed missing namespace in vector/matrix testing.

	* Removed Boost headers: now a system dependency.

	* Fixed polarRadius infinite loop.

2008-07-09  Andy Buckley  <andy@insectnation.org>

	* Fixed definitions of mapAngleMPiToPi, etc. and used them to fix
	the Jet::getPhi method.

	* Trialling use of "foreach" loop in CDF_2004: it works! Very nice.

2008-07-08  Andy Buckley  <andy@insectnation.org>

	* Removed accidental reference to an "FS" projection in
	FinalStateHCM's compare method. rivetgun -A now works again.
