@@ -1,3 +1,7 @@
+2008-07-29  Andy Buckley  <andy@insectnation.org>
+
+	* Added command line repetition to logging.
+
 2008-07-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Included the missing numbers and three more observables
